<resources>
    <string name="app_name">FoodTyro</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Charts</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_setting">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="sign_up">Sign up</string>
    <string name="storage">Storage</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="account">Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_result">No result, Please enter correct food name!</string>
    <string name="no_recommend">No Recommendation</string>
    <string name="storing">Storing</string>
    <string name="cooking">Cooking</string>
    <string name="homeLabel">Food Search</string>
    <string name="welcome">Welcome! </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dynamic_text"> Dynamic text</string>
    <string name="discard">Discard</string>
    <string name="consume">Consume</string>
    <string name="no_record">No record yet</string>
    <string name="freeze">Freezer</string>
    <string name="pantry">Pantry</string>
    <string name="refrigerate">Refrigerator</string>
    <string name="tips">Tips</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_account_">Account_Activity</string>
    <string name="log_out">Log Out</string>
    <string name="submit">submit</string>
    <string name="what_is_your_feedback_about">What is your feedback about?</string>
    <string name="general_inquiry">General Inquiry</string>
    <string name="error_report">Error Report</string>
    <string name="suggestion">Suggestion</string>
    <string name="msg_subscribed">Suggestion</string>
    <string name="msg_subscribe_failed">Suggestion</string>
    <string name="fcm_token">FCM: %s</string>
    <string name="display_name">Display Name</string>
    <string name="group_id">Group Id</string>
    <string name="change_password">Change password</string>
    <string name="visit_our_website">Visit Our Website</string>
    <string name="register_new_account">Register new account</string>
    <string name="category">Category</string>
    <string name="group">Group</string>
    <string name="create_group">Create Group</string>
    <string name="leave_group">Leave Group</string>
    <string name="creating_group">Creating Group</string>
    <string name="create">Create</string>
    <string name="code">Code (4 Digits)</string>
    <string name="copy">Copy</string>
    <string name="group_name">Group Name</string>
    <string name="no_group_yet">You are not in a Group yet</string>
    <string name="join_group">Join Group</string>
    <string name="Invitation_code">Invitation Code</string>
    <string name="pick_purchase_date">Pick Purchase Date</string>
    <string name="cancel">Cancel</string>
    <string name="spoiled_warning">If Purchase Date is not available when picking, your food might have passed its best before date</string>
    <string name="view_all">View All</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="accept">Accept</string>
    <string name="tutorial">Tutorial</string>
    <string name="search_for_food_item_here">Search for food item here!</string>
    <string name="change_icon_color">Change icon color</string>
    <string name="confirm">Confirm</string>
    <string name="orange">Orange</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="black">Black</string>
</resources>