<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#0E0635"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/icon_sample"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/dynamic_text"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/round_text_1"
        android:layout_margin="20dp"
        android:maxLength="1"/>
    <TextView android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/change_icon_color"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"/>
</LinearLayout>
    <RadioGroup
        android:id="@+id/group_radio_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/orange_choice"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/orange"
            android:tag="#FFAB13"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:checked="true"
            android:background="#FFAB13"/>
        <RadioButton
            android:id="@+id/red_choice"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/red"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:tag="#FF0000"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:background="@color/red"/>
    <RadioButton
        android:id="@+id/blue_choice"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:tag="#2196F3"
        android:buttonTint="@color/white"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="#2196F3"/>
        <RadioButton
            android:id="@+id/purple_choice"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/purple"
            android:tag="#2E43C4"
            android:textSize="20sp"
            android:textStyle="bold"
            android:buttonTint="@color/white"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="#2E43C4"/>
        <RadioButton
            android:id="@+id/black_choice"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/black"
            android:textStyle="bold"
            android:tag="#161616"
            android:buttonTint="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="#161616"/>

    </RadioGroup>
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/color_cancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_toStartOf="@id/color_confirm"
            android:layout_centerVertical="true"
            android:textColor="#5C5B5B"
            android:background="#009C9B9B"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/color_confirm"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:text="@string/confirm"
            android:background="@drawable/round_button"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
        android:layout_height="35dp"
        />
    </RelativeLayout>
</LinearLayout>