<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/design_default_color_primary_dark"
    >
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creating_group"
        android:layout_margin="20dp"
        android:textSize="17sp"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"/>
    <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"/>
</RelativeLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/group_password_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/group_name"/>
    <EditText
        android:id="@+id/group_password_et"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        />


        <TextView
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:id="@+id/group_id_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"/>
        <EditText
            android:id="@+id/group_id_et"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:maxLength="4"
            android:gravity="center"
            android:letterSpacing="1"
            android:layout_height="wrap_content"
            />

    <Button android:id="@+id/group_confirm_bt"
        android:layout_width="wrap_content"
        android:layout_margin="17dp"
        android:layout_height="35dp"
        android:layout_gravity="end"

        android:text="@string/create"
        android:background="@drawable/round_button"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        />
</LinearLayout>