<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <ImageButton
        android:id="@+id/register_back"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FF0000"
        android:layout_margin="30dp"
        android:src="@drawable/back"
        />
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"

    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegistrationActivity">
    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:src="@drawable/app_icon"
        android:layout_marginBottom="50dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/register_new_account" />

    <EditText
        android:id="@+id/email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email" />

    <EditText
        android:id="@+id/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/nameView"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:inputType="textNoSuggestions"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <CheckBox
            android:id="@+id/checkbox_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I accept FoodTyro's "
           android:textSize="18sp"
            android:textColor="@color/white"
            android:buttonTint="@color/white"/>
        <TextView
            android:id="@+id/termTx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/terms_of_use"/>
</LinearLayout>
    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="right"
        android:background="@drawable/round_button"
        android:textColor="#FFFFFF"
        android:layout_margin="20dp"
        android:text="@string/register" />

    <ProgressBar
        android:id="@+id/register_pro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        />
</LinearLayout></RelativeLayout>