<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FeedbackActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/group_title_layout"
        android:background="@color/colorPrimary"
        >
        <ImageButton
            android:id="@+id/group_back"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FF0000"
            android:layout_margin="20dp"
            android:src="@drawable/back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:text="@string/group"
            android:transitionName="@string/feedback"
            android:textColor="@color/white"
            android:layout_marginStart= "30dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/labelSize"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <LinearLayout
            android:layout_above="@+id/leave_groupBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_below="@id/group_title_layout"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <TextView android:id="@+id/teamnameTx"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dynamic_text"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/invitationTx"
                android:layout_width="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"
                android:layout_marginBottom="20dp"
                android:text="@string/Invitation_code"/>
            <TextView
                android:id="@+id/share_code_tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginBottom="20dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="-Share the code below with your housemates \n and enter the code directly in their app"
                android:gravity="center"
                />
            <RelativeLayout
                android:id="@+id/code_layout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                >

                <EditText
                    android:id="@+id/invitation_et"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="textNoSuggestions"
                    android:layout_toStartOf="@id/copy_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <Button
                    android:layout_marginStart="10dp"
                    android:id="@+id/copy_bt"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"
                    android:text="@string/copy"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/noGroupTx"
                android:layout_marginBottom="30dp"
                android:textSize="23sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/no_group_yet"
                android:visibility="gone"/>
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">
                <TextView
                    android:id="@+id/create_groupTx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Create your own Group"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="30dp"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    />

                <Button
                    android:id="@+id/create_groupBt"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:padding="10dp"
                    android:layout_marginBottom="40dp"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    android:background="@drawable/round_button"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:text="@string/create_group"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/joinGroup_tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone"
                android:text="or enter an invitation code below to join a group"/>
            <EditText
                android:visibility="gone"
                android:id="@+id/invitationcode_et"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:inputType="textNoSuggestions"
                android:hint="@string/Invitation_code"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"/>


            <Button android:id="@+id/joinBt"
                android:layout_width="200dp"
                android:layout_height="38dp"
                android:visibility="gone"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/join_group"
                />
            <TextView
                android:id="@+id/customize_color_tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="Customise Color Tag"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_margin="20dp"
                />

            <TextView android:id="@+id/change_color_tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="-A small tag with your initial is shown on each \n food item, customise your own color"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:textSize="17sp"/>
            <Button
                android:id="@+id/change_colorBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:text="@string/change_icon_color"
                android:layout_margin="20dp"/>

        </LinearLayout>
        <ProgressBar android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/group_progressBar"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            />
        <Button
            android:id="@+id/leave_groupBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/leave_group"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="30dp"
            />
        </LinearLayout>
    </ScrollView>



</LinearLayout>
